# arcade-game-language

./: .gitignore  README.md  build.sh  feedback.md  language.cabal  notepad.txt  run.sh  stack.yaml  todo.md  verslag.txt
games/: snake.skll  test.skll
lib/: Backend.hs  Config.hs  Engine.hs  Evaluator.hs  EvaluatorImplementation.hs  Keywords.hs  Manager.hs  Parser.hs  ParserImplementation.hs  Renderer.hs  Types.hs  VoorbeeldModule.hs
src/: Main.hs
tests/: simple_test1.skll  snake.skll
